--- a/frontend/conf/application.conf
+++ b/frontend/conf/application.conf
@@ -11,6 +11,8 @@ membership.feedback="membershipfeedback@theguardian.com"
 
 event.discountMultiplier=0.8
 
+content.api.key=""
+
 cors.allow.origin="https://profile.theguardian.com"
 
 eventbrite.url="http://www.eventbrite.co.uk"
