--- a/frontend/assets/javascripts/bower.json
+++ b/frontend/assets/javascripts/bower.json
@@ -11,6 +11,7 @@
     "zxcvbn": "*",
     "curl": "~0.8.10",
     "imager.js": "~0.3.0",
-    "raven-js": "~1.1.16"
+    "raven-js": "~1.1.16",
+    "string_score": "~0.1.20"
   }
 }
