--- a/frontend/conf/PROD.conf
+++ b/frontend/conf/PROD.conf
@@ -3,6 +3,7 @@
 include "application"
 
 touchpoint.backend.default=PROD
+touchpoint.backend.test=UAT
 
 google.analytics.tracking.id="UA-51507017-1"
 
