Use the same poll time for GuardianLive events and masterclasses against eventbrite

--- a/frontend/conf/application.conf
+++ b/frontend/conf/application.conf
@@ -21,7 +21,7 @@ eventbrite.api.url="https://www.eventbriteapi.com/v3"
 eventbrite.api.token=""
 eventbrite.masterclasses.api.token=""
 eventbrite.api.iframe-url="https://www.eventbrite.com/tickets-external?ref=etckt&v=2"
-eventbrite.api.refresh-time-all-events-seconds=59
+eventbrite.api.refresh-time-seconds=59
 eventbrite.api.refresh-time-priority-events-seconds=29
 
 event.ordering.json="http://s3-eu-west-1.amazonaws.com/membership-eb-images/order/order.json"
