Provide a 'blank' set of Touchpoint config so that Teamcity passes
sigh

http://teamcity.guprod.gnm/viewLog.html?buildId=300000&buildTypeId=bt1297&tab=buildLog

--- a/frontend/conf/application.conf
+++ b/frontend/conf/application.conf
@@ -56,45 +56,48 @@ stripe.api.url="https://api.stripe.com/v1"
 # Touchpoint-backend environment-specific information
 touchpoint.backend {
 
-  environments {
-    DEV {
-      stripe {
-        api.key {
-          secret = ""
-          public = ""
+    blank {
+        stripe {
+            api.key {
+                secret = ""
+                public = ""
+            }
         }
-      }
-      salesforce {
-        consumer {
-          key = ""
-          secret = ""
+        salesforce {
+            consumer {
+                key = ""
+                secret = ""
+            }
+            api {
+                url = ""
+                username = ""
+                password = ""
+                token = ""
+            }
         }
-        api {
-          url=""
-          username=""
-          password=""
-          token=""
-        }
-      }
 
-      zuora {
-        api {
-          url=""
-          username=""
-          password=""
+        zuora {
+            api {
+                url = ""
+                username = ""
+                password = ""
 
-          friend=""
-          partner {
-            monthly = ""
-            annual = ""
-          }
-          patron {
-            monthly = ""
-            annual = ""
-          }
+                friend = ""
+                partner {
+                    monthly = ""
+                    annual = ""
+                }
+                patron {
+                    monthly = ""
+                    annual = ""
+                }
+            }
         }
-      }
     }
+
+  environments {
+    DEV = ${touchpoint.backend.blank}
+    UAT = ${touchpoint.backend.blank}
   }
 }
 
