--- a/frontend/conf/application.conf
+++ b/frontend/conf/application.conf
@@ -126,7 +126,8 @@ include "benefits"
 # cache static assets for a year
 assets.defaultCache="max-age=31536000"
 
-guardian.live.events.terms.url ="http://www.theguardian.com/info/2014/sep/09/guardian-live-events-terms-and-conditions"
+guardian.live.events.terms.url="http://www.theguardian.com/info/2014/sep/09/guardian-live-events-terms-and-conditions"
+guardian.masterclasses.terms.url="http://www.theguardian.com/guardian-masterclasses/terms-and-conditions"
 guardian.privacy.url="http://www.theguardian.com/help/privacy-policy"
 guardian.membership.url="http://www.theguardian.com/membership"
 guardian.membership.terms.url ="http://www.theguardian.com/info/2014/sep/09/guardian-membership-terms-and-conditions"
