Add tests for masterclasses event list page

--- a/functional-tests/src/main/resources/project.conf
+++ b/functional-tests/src/main/resources/project.conf
@@ -19,5 +19,6 @@
   "accountEdit"    : "https://profile.code.dev-theguardian.com/account/edit",
   "membershipEdit" : "https://profile.code.dev-theguardian.com/membership/edit",
   "identity"       : "https://profile.code.dev-theguardian.com/signin",
+  "masterclasses"  : "https://mem.thegulocal.com/masterclasses"
   "browser"        : "chrome"
 }
