We should define all these properties in the private bucket

--- a/frontend/conf/application.conf
+++ b/frontend/conf/application.conf
@@ -108,7 +108,7 @@ google.oauth {
   // https://console.developers.google.com/project/guardian-membership/apiui/credential?authuser=1
   client.id=""
   client.secret=""
-  callback="https://membership.theguardian.com/oauth2callback"
+  callback=""
 }
 
 #### Play Configuration
