Revert "Test users front end"

--- a/frontend/assets/javascripts/bower.json
+++ b/frontend/assets/javascripts/bower.json
@@ -12,7 +12,6 @@
     "curl": "~0.8.10",
     "imager.js": "~0.3.0",
     "raven-js": "~1.1.16",
-    "string_score": "~0.1.20",
-    "zeroclipboard": "~2.1.6"
+    "string_score": "~0.1.20"
   }
 }
