Creating ProductPlan which relates to a Salesforce Tier. This will allow us to create a Staff subscription without creating a new Tier.

--- a/frontend/conf/application.conf
+++ b/frontend/conf/application.conf
@@ -86,6 +86,7 @@ touchpoint.backend {
                 password = ""
 
                 friend = ""
+                staff = ""
                 partner {
                     monthly = ""
                     annual = ""
