Update meta title and description for Masterclasses

--- a/frontend/conf/copy.conf
+++ b/frontend/conf/copy.conf
@@ -13,5 +13,8 @@ copy.patrons.description="The Patron tier is for those who care deeply about the
 copy.events.title="Guardian Live Events"
 copy.events.description="Guardian Live is a programme of discussions, debates, interviews, keynote speeches and festivals. Members can attend events that take the power of open journalism from print and digital into live experiences."
 
+copy.masterclasses.title="Guardian Masterclasses"
+copy.masterclasses.description="Guardian Masterclasses courses and workshops taught by award-winning professionals, with a 20% discount for partners and patrons."
+
 copy.about.title="About Guardian Membership"
 copy.about.description="Guardian Membership brings together diverse, progressive minds, journalistic skills and the best of what others create to give you a richer understanding of the world and the opportunity to shape it. Join now as a Founding Partner or Patron and guarantee that the price you pay today will not rise."
