added support email to config

--- a/frontend/conf/application.conf
+++ b/frontend/conf/application.conf
@@ -8,6 +8,7 @@ index.title="Home Page"
 
 membership.url="https://membership.theguardian.com"
 membership.feedback="membershipfeedback@theguardian.com"
+membership.support="membershipsupport@theguardian.com"
 
 event.discountMultiplier=0.8
 
