Added google groups to application.conf

--- a/frontend/conf/application.conf
+++ b/frontend/conf/application.conf
@@ -114,6 +114,11 @@ google.oauth {
   callback=""
 }
 
+google.groups {
+  client.username=""
+  client.password=""
+}
+
 #### Play Configuration
 
 # Secret key
