--- a/frontend/conf/dev.conf
+++ b/frontend/conf/dev.conf
@@ -43,3 +43,4 @@ stage="DEV"
 touchpoint.backend.default=DEV
 touchpoint.backend.test=UAT
 
+staff.authorised.emails = "membership.dev@guardian.co.uk"
