--- a/frontend/conf/dev.conf
+++ b/frontend/conf/dev.conf
@@ -43,4 +43,4 @@ stage="DEV"
 touchpoint.backend.default=DEV
 touchpoint.backend.test=UAT
 
-staff.authorised.emails = "membership.dev@guardian.co.uk"
+staff.authorised.emails.groups = "membership.dev@guardian.co.uk"
