Add second email for google groups allowed to get staff membership

--- a/frontend/conf/application.conf
+++ b/frontend/conf/application.conf
@@ -119,7 +119,7 @@ google.groups {
   client.password=""
 }
 
-staff.authorised.emails.groups = "permanent.ftc.staff@guardian.co.uk"
+staff.authorised.emails.groups = "permanent.ftc.staff@guardian.co.uk,permanent.ftc.staff.global@guardian.co.uk"
 staff.unauthorised.error = "If you are having problems signing up for your free Partner membership please email staff.membership@theguardian.com."
 
 #### Play Configuration
