--- a/frontend/conf/copy.conf
+++ b/frontend/conf/copy.conf
@@ -1,5 +1,5 @@
 copy.default.title="Guardian Membership"
-copy.default.description="Guardian Membership feeds your curiosity and broadens your perspective. Introducing Guardian Membership. The community for those who share this belief."
+copy.default.description="Guardian Membership feeds your curiosity and broadens your perspective. We introduce you to some of the world's most influential thinkers. Not only our speakers, but the community of members around you."
 
 copy.join.title="Join Guardian Membership"
 copy.join.description="Guardian Membership is launching in beta. We have ambitious plans, and new features will be added regularly. Guardian Membership will grow into a vibrant, self-organising community of free-thinkers. Help to build and shape this community by joining as a Founding Partner or Patron, with the guarantee that the price you pay today will not rise."
