added staff email to config

--- a/frontend/conf/application.conf
+++ b/frontend/conf/application.conf
@@ -9,6 +9,7 @@ index.title="Home Page"
 membership.url="https://membership.theguardian.com"
 membership.feedback="membershipfeedback@theguardian.com"
 membership.support="membershipsupport@theguardian.com"
+membership.staff.email="staff.membership@theguardian.com"
 
 event.discountMultiplier=0.8
 
