--- a/frontend/conf/application.conf
+++ b/frontend/conf/application.conf
@@ -10,6 +10,7 @@ membership.url="https://membership.theguardian.com"
 membership.feedback="membershipfeedback@theguardian.com"
 membership.support="membershipsupport@theguardian.com"
 membership.staff.email="staff.membership@theguardian.com"
+membership.dev.email="membership.dev@theguardian.com"
 
 event.discountMultiplier=0.8
 
