Add the domain to config

--- a/frontend/conf/application.conf
+++ b/frontend/conf/application.conf
@@ -11,6 +11,7 @@ membership.feedback="membershipfeedback@theguardian.com"
 membership.support="membershipsupport@theguardian.com"
 membership.staff.email="staff.membership@theguardian.com"
 membership.dev.email="membership.dev@theguardian.com"
+membership.domain="membership.theguardian.com"
 
 event.discountMultiplier=0.8
 
