Add new images for short homepage

--- a/frontend/conf/application.conf
+++ b/frontend/conf/application.conf
@@ -48,9 +48,9 @@ id.api.client.token=""
 membership.event.images.url="https://s3-eu-west-1.amazonaws.com/membership-eb-images/"
 membership.event.images.widths=[300, 460, 620, 940]
 membership.event.images.ratios=[1, 2]
-membership.home.images.widths=[980, 1140]
-membership.home.images.promo.widths=[220, 260]
+membership.home.images.widths=[480, 740, 980, 1140]
 membership.home.images.ratios=[1, 2]
+membership.home.images.promo.widths=[220, 260]
 
 twitter.username="gdnmembership"
 twitter.app.iphone.name="The Guardian"
