Update homepage feature panel images

--- a/frontend/conf/application.conf
+++ b/frontend/conf/application.conf
@@ -50,8 +50,8 @@ membership.event.images.widths=[300, 460, 620, 940]
 membership.event.images.ratios=[1, 2]
 membership.home.images.widths=[980, 1140]
 membership.home.images.ratios=[1, 2]
-membership.features.images.widths=[220, 260]
-membership.features.images.ratios=[1, 2]
+membership.features.images.widths=[130, 240, 340]
+membership.features.images.ratios=[1]
 
 twitter.username="gdnmembership"
 twitter.app.iphone.name="The Guardian"
