Check the url supplied in eventbrite is from the Grid.

--- a/frontend/conf/application.conf
+++ b/frontend/conf/application.conf
@@ -124,6 +124,12 @@ google.groups {
 
 staff.authorised.emails.groups = "permanent.ftc.staff@guardian.co.uk,permanent.ftc.staff.global@guardian.co.uk"
 
+grid.images {
+  media.url=""
+  api.url=""
+  api.key=""
+}
+
 #### Play Configuration
 
 # Secret key
