--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "grunt-contrib-requirejs": "^0.4.4",
     "grunt-contrib-sass": "^0.8.1",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-jscs": "^1.1.0",
     "grunt-karma": "~0.9.0",
     "grunt-scss-lint": "^0.3.3",
     "grunt-shell": "~1.1.1",
