--- a/frontend/conf/application.conf
+++ b/frontend/conf/application.conf
@@ -48,10 +48,8 @@ id.api.client.token=""
 membership.event.images.url="https://s3-eu-west-1.amazonaws.com/membership-eb-images/"
 membership.event.images.widths=[300, 460, 620, 940]
 membership.event.images.ratios=[1, 2]
-membership.home.images.widths=[980, 1140]
-membership.home.images.ratios=[1, 2]
-membership.features.images.widths=[130, 220, 340]
-membership.features.images.ratios=[1]
+membership.home.images.widths=[500, 1000, 2000]
+membership.home.images.ratios=[1]
 
 twitter.username="gdnmembership"
 twitter.app.iphone.name="The Guardian"
