--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,8 @@
     "grunt-karma": "~0.9.0",
     "grunt-scss-lint": "^0.3.3",
     "grunt-shell": "~1.1.1",
+    "grunt-svgmin": "^2.0.0",
+    "grunt-svgstore": "^0.5.0",
     "jshint-stylish": "^1.0.0",
     "karma": "~0.12.23",
     "karma-chrome-launcher": "^0.1.4",
