--- a/frontend/conf/application.conf
+++ b/frontend/conf/application.conf
@@ -26,6 +26,7 @@ eventbrite.masterclasses.api.token=""
 eventbrite.api.iframe-url="https://www.eventbrite.com/tickets-external?ref=etckt&v=2"
 eventbrite.api.refresh-time-seconds=59
 eventbrite.api.refresh-time-priority-events-seconds=29
+eventbrite.waitlist.url="https://www.eventbrite.co.uk/waitlist"
 
 event.ordering.json="http://s3-eu-west-1.amazonaws.com/membership-eb-images/order/order.json"
 
