--- a/frontend/conf/application.conf
+++ b/frontend/conf/application.conf
@@ -121,7 +121,7 @@ google.groups {
   client.password=""
 }
 
-staff.authorised.emails.groups = "permanent.ftc.staff@guardian.co.uk,permanent.ftc.staff.global@guardian.co.uk"
+staff.authorised.emails.groups = "permanent.ftc.staff@guardian.co.uk,permanent.ftc.staff.global@guardian.co.uk,freestaff.membership@guardian.co.uk"
 
 grid.images {
   media.url=""
