update project.conf to point to prod

--- a/functional-tests/src/main/resources/project.conf
+++ b/functional-tests/src/main/resources/project.conf
@@ -4,7 +4,7 @@
   "browser" : "chrome"
   "platform" : "Windows 8"
   "webDriverRemoteUrl" : ""
-  "testBaseUrl" : "https://membership.code.dev-theguardian.com/"
+  "testBaseUrl" : "https://membership.theguardian.com/"
 }
 
 "projectName" : "Membership"
@@ -14,11 +14,11 @@
 
 "browsers" : [{ "name" : "chrome", "version" : "latest" }]
 "user" : {
-  "identityReturn" : "https://profile.code.dev-theguardian.com/signin?returnUrl=https%3A%2F%2Fmembership.code.dev-theguardian.com/&skipConfirmation=true",
-  "partnerPayment" : "https://membership.code.dev-theguardian.com/join/partner/payment",
-  "accountEdit"    : "https://profile.code.dev-theguardian.com/account/edit",
-  "membershipEdit" : "https://profile.code.dev-theguardian.com/membership/edit",
-  "identity"       : "https://profile.code.dev-theguardian.com/signin",
-  "masterclasses"  : "https://mem.thegulocal.com/masterclasses"
+  "identityReturn" : "https://profile.theguardian.com/signin?returnUrl=https%3A%2F%2Fmembership.theguardian.com/&skipConfirmation=true",
+  "partnerPayment" : "https://membership.theguardian.com/join/partner/payment",
+  "accountEdit"    : "https://profile.theguardian.com/account/edit",
+  "membershipEdit" : "https://profile.theguardian.com/membership/edit",
+  "identity"       : "https://profile.theguardian.com/signin",
+  "masterclasses"  : "https://membership.theguardian.com/masterclasses"
   "browser"        : "chrome"
 }
